--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
-  <script src="https://use.typekit.net/ik/H2HIj761RmaN8wGiW6Qw0m56KBYlkQVNnbihnNruhuIfeT9gf5WWa3bPH2qoFQjDwRmLF2IkZAJo5QmqZAwtZA9hFD4cwhFKw2BcwQ6kjQbtwRS-FPG0jhBnZAs8Sh81dcmkOcFzOeFy-hmqZWFTZho8SKoRdkUaiaS0jhBnZAs8Sh81dcmkOcFzJ6yndhu8ifuDjkGHf4riMyMMeMb6MKGHfHHiMyMMeM96MqGIQWmDZZMglt--ub9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/_WKEZbrrs-AvC8qIaHADHlQZ_s5LSnv654f6dZD_pt3feT9gf5WWa3bPH2qoFQjDwRmLF2IkZAJo5QmqZAwtZA9hFD4cwhFKw2BcwQ6kjQbtwRS-FPG0jhBnZAs8Sh81dcmkOcFzOeFy-hmqZWFTZho8SKoRdkUaiaS0jhBnZAs8Sh81dcmkOcFzJ6yndhu8ifuDjkGHf4riMyMMeMb6MKGHfHHiMyMMeM96MqGIQWmDZZMg1Gc-ub9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -80,7 +80,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="verticalspacer" data-offset-top="1109" data-content-above-spacer="1109" data-content-below-spacer="52" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="pu428-4"><!-- column -->
      <div class="clearfix colelem shared_content" id="u428-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u428-4_content"><!-- content -->
-      <p>&quot;Make your dream cake with Olisa&quot;</p>
+      <p>&quot;Make your dream cakes with Olisa&quot;</p>
      </div>
      <div class="clearfix colelem shared_content" id="pu1150-4" data-content-guid="pu1150-4_content"><!-- group -->
       <div class="clearfix grpelem" id="u1150-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
