--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4170045749"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=247637796" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4279895321"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=536715182" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3806214405"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=3818081644" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3930881506"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=15161775" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
-  <script src="https://use.typekit.net/ik/_WKEZbrrs-AvC8qIaHADHlQZ_s5LSnv654f6dZD_pt3feT9gf5WWa3bPH2qoFQjDwRmLF2IkZAJo5QmqZAwtZA9hFD4cwhFKw2BcwQ6kjQbtwRS-FPG0jhBnZAs8Sh81dcmkOcFzOeFy-hmqZWFTZho8SKoRdkUaiaS0jhBnZAs8Sh81dcmkOcFzJ6yndhu8ifuDjkGHf4riMyMMeMb6MKGHfHHiMyMMeM96MqGIQWmDZZMg1Gc-ub9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/JquKp9YFZh4BS53QoF-DWahSkHcFoasOGBlFWUox9w3feT9gf5WWa3bPH2qoFQjDwRmLF2IkZAJo5QmqZAwtZA9hFD4cwhFKw2BcwQ6kjQbtwRS-FPG0jhBnZAs8Sh81dcmkOcFzOeFy-hmqZWFTZho8SKoRdkUaiaS0jhBnZAs8Sh81dcmkOcFzJ6yndhu8ifuDjkGHf4riMyMMeMb6MKGHfHHiMyMMeM96MqGIQWmDZZMg6jfxub9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -37,7 +37,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body class="museBGSize">
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="769"><!-- responsive breakpoint node -->
-   <div class="rounded-corners clearfix borderbox" id="page"><!-- group -->
+   <div class="shadow rounded-corners clearfix borderbox" id="page"><!-- group -->
     <div class="clearfix grpelem" id="pu827-3"><!-- group -->
      <div class="clearfix grpelem shared_content" id="u827-3" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u827-3_content"><!-- content -->
       <p>&nbsp;</p>
@@ -80,7 +80,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="verticalspacer" data-offset-top="1109" data-content-above-spacer="1109" data-content-below-spacer="52" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="pu428-4"><!-- column -->
      <div class="clearfix colelem shared_content" id="u428-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u428-4_content"><!-- content -->
-      <p>&quot;Make your dream cakes with Olisa&quot;</p>
+      <p>&quot;Make your dream cake with Olisa&quot;</p>
      </div>
      <div class="clearfix colelem shared_content" id="pu1150-4" data-content-guid="pu1150-4_content"><!-- group -->
       <div class="clearfix grpelem" id="u1150-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
@@ -102,7 +102,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
   </div>
   <div class="breakpoint" id="bp_768" data-min-width="481" data-max-width="768"><!-- responsive breakpoint node -->
-   <div class="rounded-corners clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+   <div class="shadow rounded-corners clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu827-3"><!-- group -->
      <span class="clearfix grpelem placeholder" data-placeholder-for="u827-3_content"><!-- placeholder node --></span>
      <nav class="MenuBar clearfix grpelem temp_no_id" data-orig-id="menuu889"><!-- vertical box -->
@@ -155,7 +155,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
   </div>
   <div class="breakpoint" id="bp_480" data-max-width="480"><!-- responsive breakpoint node -->
-   <div class="rounded-corners clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+   <div class="shadow rounded-corners clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu827-3"><!-- group -->
      <span class="clearfix grpelem placeholder" data-placeholder-for="u827-3_content"><!-- placeholder node --></span>
      <nav class="MenuBar clearfix grpelem temp_no_id" data-orig-id="menuu889"><!-- vertical box -->
