--- a/about.html
+++ b/about.html
@@ -17,23 +17,25 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>about</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4170045749"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=39170954" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4279895321"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=25666499" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3806214405"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=4225398507" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3930881506"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=96890759" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
-  <script src="https://use.typekit.net/ik/EZzvHLm4piS03cyp-u70mtPpvAPubZnUdT6f9l0wMbbfe7Igf5WWa3bPH2qoFQjDwRmLF2IkZAJo5QmqZAwtZA9hFD4cwhFKw2BcwQ6kjQbtwRS-FPG0jhBnZAs8Sh81dcmkOcFzOeFy-hmqZWFTZho8SKoRdkUaiaS0jhBnZAs8Sh81dcmkOcFzJ6yndhu8ifuDjkGHf4riMyMMeMb6MKGHfH-iMyMMeM66MKGHfHHiMyMMeM96MqGIQWmDZZMg0J--ub9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/kqW380BLRfpkO85EF5T43RLNA11k2AzEtvjO6xLt5p9fe7Igf5WWa3bPH2qoFQjDwRmLF2IkZAJo5QmqZAwtZA9hFD4cwhFKw2BcwQ6kjQbtwRS-FPG0jhBnZAs8Sh81dcmkOcFzOeFy-hmqZWFTZho8SKoRdkUaiaS0jhBnZAs8Sh81dcmkOcFzJ6yndhu8ifuDjkGHf4riMyMMeMb6MKGHfH-iMyMMeM66MKGHfHHiMyMMeM96MqGIQWmDZZMg6tfxub9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
 </script>
-   </head>
+    <!--HTML Widget code-->
+  <style type="text/css">#u1983.size_fluid_width_height iframe { position:absolute; left:0; top:0; }</style>
+ </head>
  <body class="museBGSize">
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="769"><!-- responsive breakpoint node -->
@@ -88,8 +90,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <p id="u1595-7"><span id="u1595-3">&nbsp;</span><span id="u1595-4">My </span><a class="nonblock" href="assets/sabrina-johnson-resume-1.pdf"><span id="u1595-5">Resume</span></a></p>
       </div>
      </div>
+     <a class="nonblock nontext size_fluid_width_height colelem shared_content" id="u1983" href="http://%3Ciframe%20width=%22560%22%20height=%22315%22%20src=%22https://www.youtube.com/embed/VilICGHstkU%22%20frameborder=%220%22%20allow=%22autoplay;%20encrypted-media%22%20allowfullscreen%3E%3C/iframe%3E" data-pintopage="page_fluidx" data-sizePolicy="fluidWidthHeight" data-content-guid="u1983_content"><!-- custom html --><div class="fluid_height_spacer"></div>
+<iframe class="actAsDiv" style="width:100%;height:100%;" src="//www.youtube.com/embed/VilICGHstkU?autoplay=0&loop=0&showinfo=0&theme=dark&color=red&controls=1&modestbranding=0&start=0&fs=1&iv_load_policy=1&wmode=transparent&rel=1" frameborder="0" allowfullscreen></iframe>
+</a>
+     <div class="clearfix colelem shared_content" id="u1992-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u1992-4_content"><!-- content -->
+      <p>Youtube Video</p>
+     </div>
     </div>
-    <div class="verticalspacer" data-offset-top="982" data-content-above-spacer="982" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1155" data-content-above-spacer="1185" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="u379"><!-- group -->
      <div class="clearfix grpelem shared_content" id="u385-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u385-4_content"><!-- content -->
       <p id="u385-2">copyright 2018</p>
@@ -127,8 +135,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/me.gif?crc=427196371" alt="" data-heightwidthratio="1.2403846153846154" data-image-width="104" data-image-height="129" data-orig-id="u1523_img" src="images/blank.gif?crc=4208392903"/>
       </div>
      </div>
+     <span class="nonblock nontext size_fluid_width_height colelem placeholder" data-placeholder-for="u1983_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u1992-4_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="996" data-content-above-spacer="995" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1219" data-content-above-spacer="1218" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem" id="u379-bw">
      <div class="temp_no_id" data-orig-id="u379"><!-- group -->
       <div class="clearfix" id="u379_align_to_page">
@@ -168,8 +178,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u1595-9_content"><!-- placeholder node --></span>
      </div>
+     <span class="nonblock nontext size_fluid_width_height colelem placeholder" data-placeholder-for="u1983_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u1992-4_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="931" data-content-above-spacer="965" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1185" data-content-above-spacer="1189" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u379-bw">
      <div class="temp_no_id" data-orig-id="u379"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u379_align_to_page">
