--- a/contact.html
+++ b/contact.html
@@ -17,18 +17,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4170045749"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=485757589" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4279895321"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=4049539814" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3806214405"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=414817735" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3930881506"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_contact.css?crc=252509728" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
-  <script src="https://use.typekit.net/ik/Rm3-FpiT-FDSvUwMMGkzvVhxQj2weii0ejJ_0L6Cd43feT9gf5WWa3bPH2qoFQjDwRmLF2IkZAJo5QmqZAwtZA9hFD4cwhFKw2BcwQ6kjQbtwRS-FPG0jhBnZAs8Sh81dcmkOcFzOeFy-hmqZWFTZho8SKoRdkUaiaS0jhBnZAs8Sh81dcmkOcFzJ6yndhu8ifuDjkGHf4riMyMMeMb6MKGHfHHiMyMMeM96MqGIQWmDZZMgzt--ub9.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/o8BYf1DZO9opi7mjthhttdjpiLbM-hrL1HR_IIwsrrwfeT9gf5WWa3bPH2qoFQjDwRmLF2IkZAJo5QmqZAwtZA9hFD4cwhFKw2BcwQ6kjQbtwRS-FPG0jhBnZAs8Sh81dcmkOcFzOeFy-hmqZWFTZho8SKoRdkUaiaS0jhBnZAs8Sh81dcmkOcFzJ6yndhu8ifuDjkGHf4riMyMMeMb6MKGHfHHiMyMMeM96MqGIQWmDZZMgytfxub9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -119,8 +119,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <p id="u763-3"><a class="nonblock" href="https://www.instagram.com/sabrinajohnson4/"><span id="u763">Olisacakes</span></a></p>
       </div>
      </div>
+     <div class="size_fluid_width colelem shared_content" id="u1974" data-pintopage="page_fluidx" data-sizePolicy="fluidWidth" data-content-guid="u1974_content"><!-- custom html -->
+      
+<iframe class="actAsDiv" style="width:100%;height:100%;" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;q=1501%20Biscayne%20Blvd%20Suite%20100.%20Miami%2C%20Fl%2033132&amp;aq=0&amp;ie=UTF8&amp;t=m&amp;z=12&amp;iwloc=A&amp;output=embed"></iframe>
+
+     </div>
+     <div class="clearfix colelem shared_content" id="u1997-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-content-guid="u1997-4_content"><!-- content -->
+      <p>Address</p>
+     </div>
     </div>
-    <div class="verticalspacer" data-offset-top="879" data-content-above-spacer="960" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1136" data-content-above-spacer="1175" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="u379"><!-- group -->
      <div class="clearfix grpelem shared_content" id="u385-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u385-4_content"><!-- content -->
       <p id="u385-2">copyright 2018</p>
@@ -195,8 +203,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://www.linkedin.com/in/olisa-cake-8419a215a/?trk=onboarding-landing&amp;dl=no" data-orig-id="u743"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/in.png?crc=93124647" alt="" data-heightwidthratio="1" data-image-width="35" data-image-height="35" data-orig-id="u743_img" src="images/blank.gif?crc=4208392903"/></a>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u769-5_content"><!-- placeholder node --></span>
      </div>
+     <span class="size_fluid_width colelem placeholder" data-placeholder-for="u1974_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u1997-4_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="890" data-content-above-spacer="995" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1188" data-content-above-spacer="1223" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem" id="u379-bw">
      <div class="temp_no_id" data-orig-id="u379"><!-- group -->
       <div class="clearfix" id="u379_align_to_page">
@@ -277,8 +287,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://www.linkedin.com/in/olisa-cake-8419a215a/?trk=onboarding-landing&amp;dl=no" data-orig-id="u743"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/in.png?crc=93124647" alt="" data-heightwidthratio="1" data-image-width="52" data-image-height="52" data-orig-id="u743_img" src="images/blank.gif?crc=4208392903"/></a>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u769-5_content"><!-- placeholder node --></span>
      </div>
+     <span class="size_fluid_width colelem placeholder" data-placeholder-for="u1974_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u1997-4_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="946" data-content-above-spacer="965" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1176" data-content-above-spacer="1202" data-content-below-spacer="132" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u379-bw">
      <div class="temp_no_id" data-orig-id="u379"><!-- group -->
       <div class="clearfix temp_no_id" data-orig-id="u379_align_to_page">
